О проекте: FAQ с главной + статьи; Последние оценки: единообразие с другими разделами; мобилка: постера больше, кнопки справа от постера

--- a/index.html
+++ b/index.html
@@ -434,6 +434,83 @@
                             <div class="faq-body">В Telegram-боте откройте карточку фильма или сериала и используйте кнопку удаления. Управление данными доступно только в боте — на сайте отображается только просмотр.</div>
                         </div>
                     </div>
+                    <div class="faq-block cabinet-faq-public">
+                        <h3>Частые вопросы</h3>
+                        <div class="faq-item">
+                            <div class="faq-head">Как настроить уведомления о новых сериях в Telegram?</div>
+                            <div class="faq-body">Добавьте сериал в Movie Planner (ссылкой с Кинопоиска или поиском), откройте карточку и нажмите «Подписаться на новые серии». Бот будет присылать уведомления о выходе эпизодов на Okko, Kinopoisk, ivi и других стримингах.</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Какой трекер сериалов в Telegram лучше подходит для группы?</div>
+                            <div class="faq-body">Movie Planner — трекер сериалов для Telegram с поддержкой групповых чатов. Добавьте бота в группу — все участники увидят общий список сериалов, смогут отмечать прогресс и планировать совместные просмотры.</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Можно ли вести общий список сериалов с друзьями?</div>
+                            <div class="faq-body">Да. Создайте группу в Telegram, добавьте туда бота Movie Planner — список сериалов станет общим. Каждый может добавлять сериалы, видеть прогресс друг друга и планировать марафоны.</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Как отмечать просмотренные эпизоды и смотреть прогресс?</div>
+                            <div class="faq-body">Расширение для Chrome автоматически распознаёт сериал на странице стриминга — нажмите кнопку «Отметить серию». Или отметьте вручную в боте. Прогресс отображается в карточке сериала (например, S2 • E5).</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Работает ли трекер сериалов без подписки?</div>
+                            <div class="faq-body">Базовый функционал — база сериалов, отметка эпизодов, уведомления о новых сериях — бесплатен. Расширенные возможности (безлимитные подписки на сериалы, приоритетные уведомления) доступны по подписке.</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Как планировать походы в кино с билетами?</div>
+                            <div class="faq-body">Выберите «В кино» при планировании просмотра, укажите дату и время, прикрепите фото билетов. За 10 минут до сеанса бот пришлёт напоминание вместе с вашими билетами.</div>
+                        </div>
+                    </div>
+                    <div class="cabinet-articles">
+                        <h3>Полезные статьи</h3>
+                        <div class="articles-grid">
+                            <a href="/articles/treker-serialov-telegram.html" class="article-card">
+                                <span class="article-card-icon">📺</span>
+                                <span class="article-card-title">Трекер сериалов в Telegram</span>
+                                <span class="article-card-desc">Уведомления о новых сериях и прогресс просмотра</span>
+                            </a>
+                            <a href="/articles/uvedomleniya-o-novyh-seriyah.html" class="article-card">
+                                <span class="article-card-icon">🔔</span>
+                                <span class="article-card-title">Уведомления о новых сериях</span>
+                                <span class="article-card-desc">Как не пропустить эпизод любимого сериала</span>
+                            </a>
+                            <a href="/articles/spisok-serialov-v-telegram.html" class="article-card">
+                                <span class="article-card-icon">👥</span>
+                                <span class="article-card-title">Общий список сериалов</span>
+                                <span class="article-card-desc">Групповой трекер и марафоны с друзьями</span>
+                            </a>
+                            <a href="/articles/plan-prosmotra-serialov.html" class="article-card">
+                                <span class="article-card-icon">📅</span>
+                                <span class="article-card-title">Планирование просмотра сериалов</span>
+                                <span class="article-card-desc">Трекер и напоминания в Telegram</span>
+                            </a>
+                            <a href="/articles/kak-vesti-watchlist.html" class="article-card">
+                                <span class="article-card-icon">📚</span>
+                                <span class="article-card-title">Как вести watchlist</span>
+                                <span class="article-card-desc">Список желаемого: фильмы и сериалы</span>
+                            </a>
+                            <a href="/articles/top-10-serialov.html" class="article-card">
+                                <span class="article-card-icon">⭐</span>
+                                <span class="article-card-title">Топ-10 возможностей для сериалов</span>
+                                <span class="article-card-desc">Всё, что умеет Movie Planner</span>
+                            </a>
+                            <a href="/articles/vs-letterboxd-trakt.html" class="article-card">
+                                <span class="article-card-icon">⚖️</span>
+                                <span class="article-card-title">Movie Planner vs Letterboxd vs Trakt</span>
+                                <span class="article-card-desc">Сравнение сервисов</span>
+                            </a>
+                            <a href="/articles/kak-plan-pohod-kino.html" class="article-card">
+                                <span class="article-card-icon">🎫</span>
+                                <span class="article-card-title">Походы в кино</span>
+                                <span class="article-card-desc">Планирование и билеты</span>
+                            </a>
+                            <a href="/articles/instrukciya-novichkam.html" class="article-card">
+                                <span class="article-card-icon">🚀</span>
+                                <span class="article-card-title">Инструкция для новичков</span>
+                                <span class="article-card-desc">Первые шаги за 5 минут</span>
+                            </a>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
@@ -527,6 +604,83 @@
                         <div class="faq-item">
                             <div class="faq-head">Как удалить информацию из бота?</div>
                             <div class="faq-body">В Telegram-боте откройте карточку фильма или сериала и используйте кнопку удаления. Управление данными доступно только в боте.</div>
+                        </div>
+                    </div>
+                    <div class="faq-block cabinet-faq-public">
+                        <h3>Частые вопросы</h3>
+                        <div class="faq-item">
+                            <div class="faq-head">Как настроить уведомления о новых сериях в Telegram?</div>
+                            <div class="faq-body">Добавьте сериал в Movie Planner (ссылкой с Кинопоиска или поиском), откройте карточку и нажмите «Подписаться на новые серии». Бот будет присылать уведомления о выходе эпизодов на Okko, Kinopoisk, ivi и других стримингах.</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Какой трекер сериалов в Telegram лучше подходит для группы?</div>
+                            <div class="faq-body">Movie Planner — трекер сериалов для Telegram с поддержкой групповых чатов. Добавьте бота в группу — все участники увидят общий список сериалов, смогут отмечать прогресс и планировать совместные просмотры.</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Можно ли вести общий список сериалов с друзьями?</div>
+                            <div class="faq-body">Да. Создайте группу в Telegram, добавьте туда бота Movie Planner — список сериалов станет общим. Каждый может добавлять сериалы, видеть прогресс друг друга и планировать марафоны.</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Как отмечать просмотренные эпизоды и смотреть прогресс?</div>
+                            <div class="faq-body">Расширение для Chrome автоматически распознаёт сериал на странице стриминга — нажмите кнопку «Отметить серию». Или отметьте вручную в боте. Прогресс отображается в карточке сериала (например, S2 • E5).</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Работает ли трекер сериалов без подписки?</div>
+                            <div class="faq-body">Базовый функционал — база сериалов, отметка эпизодов, уведомления о новых сериях — бесплатен. Расширенные возможности (безлимитные подписки на сериалы, приоритетные уведомления) доступны по подписке.</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Как планировать походы в кино с билетами?</div>
+                            <div class="faq-body">Выберите «В кино» при планировании просмотра, укажите дату и время, прикрепите фото билетов. За 10 минут до сеанса бот пришлёт напоминание вместе с вашими билетами.</div>
+                        </div>
+                    </div>
+                    <div class="cabinet-articles">
+                        <h3>Полезные статьи</h3>
+                        <div class="articles-grid">
+                            <a href="/articles/treker-serialov-telegram.html" class="article-card">
+                                <span class="article-card-icon">📺</span>
+                                <span class="article-card-title">Трекер сериалов в Telegram</span>
+                                <span class="article-card-desc">Уведомления о новых сериях и прогресс просмотра</span>
+                            </a>
+                            <a href="/articles/uvedomleniya-o-novyh-seriyah.html" class="article-card">
+                                <span class="article-card-icon">🔔</span>
+                                <span class="article-card-title">Уведомления о новых сериях</span>
+                                <span class="article-card-desc">Как не пропустить эпизод любимого сериала</span>
+                            </a>
+                            <a href="/articles/spisok-serialov-v-telegram.html" class="article-card">
+                                <span class="article-card-icon">👥</span>
+                                <span class="article-card-title">Общий список сериалов</span>
+                                <span class="article-card-desc">Групповой трекер и марафоны с друзьями</span>
+                            </a>
+                            <a href="/articles/plan-prosmotra-serialov.html" class="article-card">
+                                <span class="article-card-icon">📅</span>
+                                <span class="article-card-title">Планирование просмотра сериалов</span>
+                                <span class="article-card-desc">Трекер и напоминания в Telegram</span>
+                            </a>
+                            <a href="/articles/kak-vesti-watchlist.html" class="article-card">
+                                <span class="article-card-icon">📚</span>
+                                <span class="article-card-title">Как вести watchlist</span>
+                                <span class="article-card-desc">Список желаемого: фильмы и сериалы</span>
+                            </a>
+                            <a href="/articles/top-10-serialov.html" class="article-card">
+                                <span class="article-card-icon">⭐</span>
+                                <span class="article-card-title">Топ-10 возможностей для сериалов</span>
+                                <span class="article-card-desc">Всё, что умеет Movie Planner</span>
+                            </a>
+                            <a href="/articles/vs-letterboxd-trakt.html" class="article-card">
+                                <span class="article-card-icon">⚖️</span>
+                                <span class="article-card-title">Movie Planner vs Letterboxd vs Trakt</span>
+                                <span class="article-card-desc">Сравнение сервисов</span>
+                            </a>
+                            <a href="/articles/kak-plan-pohod-kino.html" class="article-card">
+                                <span class="article-card-icon">🎫</span>
+                                <span class="article-card-title">Походы в кино</span>
+                                <span class="article-card-desc">Планирование и билеты</span>
+                            </a>
+                            <a href="/articles/instrukciya-novichkam.html" class="article-card">
+                                <span class="article-card-icon">🚀</span>
+                                <span class="article-card-title">Инструкция для новичков</span>
+                                <span class="article-card-desc">Первые шаги за 5 минут</span>
+                            </a>
                         </div>
                     </div>
                 </section>
