Главная: обновить заголовок, подзаголовок и описание героя

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Movie Planner — планировщик фильмов и сериалов</h1>
-                <p class="hero-subtitle">Watchlist, напоминания, походы в кино и трекер сериалов в Telegram</p>
-                <p class="hero-description">Ведите базу просмотров, планируйте кино дома или в кинотеатре, отслеживайте сериалы. Telegram-бот и браузерное расширение для Kinopoisk, IMDb и Letterboxd.</p>
+                <h1 class="hero-title">Movie Planner — сервис для планирования просмотра фильмов и сериалов.</h1>
+                <p class="hero-subtitle">Watchlist, напоминания о планах, походы в кино и трекер сериалов.</p>
+                <p class="hero-description">Ведите базу просмотров, планируйте кино дома или в кинотеатре, отслеживайте сериалы.<br>Доступен через Telegram, веб-версию и браузерное расширение для Kinopoisk, IMDb и Letterboxd.</p>
                 <div class="hero-buttons">
                     <a href="https://t.me/movie_planner_bot" class="btn btn-primary" target="_blank">Запустить Movie Planner</a>
                     <a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol?authuser=0&hl=ru" class="btn btn-secondary" target="_blank">🧩 Установить расширение</a>
